--- a/01/index.html
+++ b/01/index.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtuber</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.6.0/fonts/remixicon.min.css">
 </head>
-<body>
 
-    <h1 class="bg">Bem-vindo ao meu canal!</h1>
-    <p>Aqui você encontrará vídeos sobre diversos assuntos.</p>
+<body>
+    <header class=fixed top-0 left-0 right-0 z-50 flex items-center justify-between p-4 bg-white shadow-md>
+        <div class="flex items-center gap-4">
+            <button class="p-2 hover:bg-gray-200 rounded-full cursor-pointer">
+                <i>
+                    <i class="ri-menu-line text-xl"></i>
+                </i>
+            </button>
+            <div class="flex items-center gap-2">                    
+                <i class="ri-youtube-fill tex-3xl text-red-600"></i>
+                <span>YouTube</span>
+                <span>Br</span> 
+            </div>
+
+        </div>
+    </header>
+
+
 
 </body>
+
 </html>
 </body>
+
 </html>
